--- a/src/main/resources/templates/provider/accreditamento.html
+++ b/src/main/resources/templates/provider/accreditamento.html
@@ -166,7 +166,41 @@
 														<h2>Pannello 1</h2>
 														<div class="clearfix"></div>
 													</div>
-													<div class="x_content"></div>
+													<div class="x_content col-xs-12">
+														<table class="datatable-responsive table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+															<thead>
+																<tr>
+																	<th th:text="label.responsabile">Responsabile</th>
+																	<th th:text="label.stato_inserimento">Stato inserimento</th>
+																</tr>
+															</thead>
+															<tbody>
+																<tr>
+																	<td th:if="${accreditamentoWrapper.responsabileSegreteria != null}"><a th:text="#{label.responsabile_segreteria}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.legaleRappresentante.id}/edit|}"></a></td>
+																	<td th:if="${accreditamentoWrapper.responsabileSegreteria == null}"><a th:text="#{label.responsabile_segreteria}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=RESPONSABILE_SEGRETERIA|}"></a></td>
+																	
+																	<td	th:if="${accreditamentoWrapper.responsabileSegreteria != null}">
+																		<span class="fa fa-check green"></span>
+																	</td>
+																	<td	th:unless="${accreditamentoWrapper.responsabileSegreteria == null}">
+																		<span class="fa fa-remove red"></span>
+																	</td>
+																</tr>
+																<tr>
+																	<td th:if="${accreditamentoWrapper.responsabileAmministrativo != null}"><a th:text="#{label.responsabile_amministrativo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.legaleRappresentante.id}/edit|}"></a></td>
+																	<td th:if="${accreditamentoWrapper.responsabileAmministrativo == null}"><a th:text="#{label.responsabile_amministrativo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=RESPONSABILE_AMMINISTRATIVO|}"></a></td>
+																</tr>
+																<tr>
+																	<td th:if="${accreditamentoWrapper.responsabileSistemaInformatico != null}"><a th:text="#{label.responsabile_sistema_informatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.legaleRappresentante.id}/edit|}"></a></td>
+																	<td th:if="${accreditamentoWrapper.responsabileSistemaInformatico == null}"><a th:text="#{label.responsabile_sistema_informatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=RESPONSABILE_SISTEMA_INFORMATICO|}"></a></td>
+																</tr>
+																<tr>
+																	<td th:if="${accreditamentoWrapper.responsabileQualita != null}"><a th:text="#{label.responsabile_qualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.legaleRappresentante.id}/edit|}"></a></td>
+																	<td th:if="${accreditamentoWrapper.responsabileQualita == null}"><a th:text="#{label.responsabile_qualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=RAPPRESENTANTE_QUALITA|}"></a></td>
+																</tr>
+															</tbody>
+														</table>
+													</div>
 												</div>
 											</div>
 										</div>
