--- a/src/main/resources/templates/provider/accreditamentoList.html
+++ b/src/main/resources/templates/provider/accreditamentoList.html
@@ -13,6 +13,7 @@
 						<h2 th:text="#{label.accreditamenti_lista}">Lista degli
 							accreditamenti</h2>
 						<a class="btn btn-primary pull-right"
+							th:if="${canProviderCreateAccreditamento}"
 							th:href="@{/provider/accreditamento/new}"
 							th:text="#{label.nuova_domanda}">label.nuova_domanda</a>
 						<div class="clearfix"></div>
