--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -232,7 +232,7 @@
 							<th:block th:fragment="allegati(tipoAllegato, counter)" th:remove="all">
 								<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.__${tipoAllegato}__')} ? 'bad'">
 								<label class="control-label col-xs-1" th:text="${counter}">11</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="__${tipoAllegato}___persona">
+								<label class="control-label col-md-3 col-sm-3 col-xs-11" th:for="__${tipoAllegato}___persona">
 									<span th:text="#{label.__${tipoAllegato}__}">tipo allegato</span>
 									<span class="required">*</span>
 								</label>
@@ -242,10 +242,11 @@
 												class="form-control col-md-7 col-xs-12 btn" />
 												
 											<span th:if="${personaWrapper.__${tipoAllegato}__.data}" th:id="__${tipoAllegato}___persona" class="form-control col-md-5 col-xs-10">
-												<span class="col-md-11 col-xs-11">
-													<a th:text="${personaWrapper.__${tipoAllegato}__.nomeFile}" th:href="@{|/files/${personaWrapper.__${tipoAllegato}__.id}|}"></a>
+												<span class="col-md-11 col-xs-11 allegato-link">
+													<a th:unless="${personaWrapper.__${tipoAllegato}__.new}" th:text="${personaWrapper.__${tipoAllegato}__.nomeFile}" th:href="@{|/files/${personaWrapper.__${tipoAllegato}__.id}|}"></a>
+													<span th:if="${personaWrapper.__${tipoAllegato}__.new}" th:text="${personaWrapper.__${tipoAllegato}__.nomeFile}" th:href="@{|/files/${personaWrapper.__${tipoAllegato}__.id}|}"></span>
 												</span>
-												<span class="col-md-1 col-xs-1">
+												<span class="col-md-1 col-xs-1" th:unless="${personaWrapper.__${tipoAllegato}__.new}">
 													<a th:href="@{|/files/${personaWrapper.__${tipoAllegato}__.id}/delete|}">
 														<i class="fa fa-remove red icon"></i>
 													</a>
@@ -256,7 +257,7 @@
 								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, counter)}">
 									<div class="col-md-4 col-sm-4 col-xs-12">
 										<label th:id="__${tipoAllegato}___persona_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
-											th:text="${personaWrapper.__${tipoAllegato}__.nomeFile}"></label>
+											th:text="${personaWrapper.__${tipoAllegato}__.nomeFile}" th:href="@{|/files/${personaWrapper.__${tipoAllegato}__.id}|}"></label>
 									</div>
 								</th:block>
 								<div th:if="${#fields.hasErrors('personaWrapper.__${tipoAllegato}__')}" class="alert" th:errors="${personaWrapper.__${tipoAllegato}__}"></div>
