Bugfix e migliorie varie

--- a/src/main/resources/templates/provider/showProvider.html
+++ b/src/main/resources/templates/provider/showProvider.html
@@ -64,7 +64,7 @@
 				<div class="well profile_view">
 					<div class="col-sm-12">
 						<h4 class="brief">
-							<span class="text-uppercase" th:text="${persona.ruolo}">Ruolo</span>
+							<span class="text-uppercase" th:text="${persona.ruolo.nome}">Ruolo</span>
 						</h4>
 						<div class="left col-xs-9">
 							<h2 th:text="${persona.anagrafica.cognome} + ' ' + ${persona.anagrafica.nome}">Cognome nome</h2>
