--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -8,8 +8,7 @@
 			<div class="left_col scroll-view">
 
 				<div class="navbar nav_title" style="border: 0;">
-					<a href="home.html" th:href="@{/home}" class="site_title"><i
-						class="fa fa-paw"></i> <span th:text="#{app.title_short}">app.title_short</span></a>
+					<a href="home.html" th:href="@{/home}" class="site_title"><span class="site_title_name" th:text="#{app.title_short}">app.title_short</span> <img class="pull-right" th:src="@{/images/main_image.png}" style="max-height: 55px; margin: 5px 10px;" /></a>
 				</div>
 				<div class="clearfix"></div>
 
