--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,14 +7,19 @@
 
 	<body style="background:#F7F7F7;">
 
-	  <div class="">
+	  <div class="col-xs-12">
 	    <a class="hiddenanchor" id="tologin"></a>
 	    <a class="hiddenanchor" id="toreset"></a>
 	
 	    <div id="wrapper">
 	      <div id="login" class="animate form">
 	        <section class="login_content">
-	        <h1><img th:src="@{/images/logo.jpg}" /><span th:text="' ' + #{app.title}"></span> <img th:src="@{/images/main_image.png}" /></h1>
+	        <h1 class="title" th:text="' ' + #{app.title}"></h1>
+	        
+	        	<img class="col-xs-3 login-img" th:src="@{/images/logo.jpg}"/>
+	        	<span class="col-xs-1"></span>
+	        	<img class="col-xs-8 login-img" th:src="@{/images/main_image.png}" />
+	        
 	          <form th:action="@{/login}" method="post">
 	            <div th:if="${param.error}" th:text="#{label.errore_login}" class="alert alert-error"></div>   
 	            <div th:if="${param.error}" th:text="${error}" class="alert alert-error"></div>    
@@ -28,8 +33,8 @@
 	              <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 	              <div class="input-group">
 	              	<div class="checkbox">
-	                  <label>
-    	                  <input type="checkbox" name="remember-me" id="remember-me"/> <span th:text="#{label.ricordami}">label.ricordami</span>
+	                  <label class="remember-login-label">
+    	                  <input class="flat" type="checkbox" name="remember-me" id="remember-me"/> <span th:text="#{label.ricordami}">label.ricordami</span>
         	          </label>
                   	</div>
                   </div>
