--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -83,14 +83,9 @@ body.nav-md .container.body .right_col.main{
 	padding-left: 0px;
 }
 
-.title {
-	margin-bottom: 20px;
-}
-
 .login-img {
 	margin-bottom: 20px;
-	max-height: 105px;
-	min-height: 105px;
+	width: 100%;
 }
 
 .login_content {
